# python-api-crud-front

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  router.py  schemas.py
frontend/: Dockerfile  app.py
