[tool.poetry]
name = "python-api-crud-front"
version = "0.1.0"
description = ""
authors = ["Robinson Lovatto <robinson.lovatto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
streamlit = "^1.35.0"
pandas = "^2.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
